--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ var getWizardHeight = function(wizardWidth) {
 };
 
 var getWizardX = function(width) {
-  return width / 2;
+  return width / 2 - wizardWidth / 2;
 };
 
 var getWizardY = function(height) {
-  return height * 2 / 3;
+  return height * 1 / 3 - getWizardHeight(wizardWidth) / 2;
 };
 </script>
 <script src="js/game.js"></script>
