--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ var getWizardX = function(width) {
 };
 
 var getWizardY = function(height) {
-  return height * 1 / 3 - getWizardHeight(wizardWidth) / 2;
+  return height * 1 / 3 - getWizardHeight(wizardWidth);
 };
 </script>
 <script src="js/game.js"></script>
